@@ -11,6 +11,7 @@ Update setuptools requirement to 70.2.0
 Added [`letterboxd_user_lists`](https://kometa.wiki/en/latest/files/dynamic_types/#letterboxd-user-lists) Dynamic Collection Type
 
 # Updates
+F1 session naming improvements
 
 # Defaults
 
